ikiwiki (3.20100815.2) UNRELEASED; urgency=low

  * openid: Syntax tweak to the javascript code to make it work with MSIE 7
    (and MSIE 8 in compat mode). Thanks to Iain McLaren for reporting
    the bug and providing access to debug it.

 -- Joey Hess <joeyh@debian.org>  Sun, 15 Aug 2010 11:42:55 -0400

ikiwiki (3.20100815) unstable; urgency=medium

  * Fix po test suite to not assume ikiwiki's underlay is already installed.
    Closes: #593047

 -- Joey Hess <joeyh@debian.org>  Sun, 15 Aug 2010 11:42:55 -0400

ikiwiki (3.20100804) unstable; urgency=low

  * template: Fix dependency tracking. Broken in version 3.20100427.
  * po: The po_slave_languages setting is now a list, so the order of
    translated languages can be controlled. (intrigeri)
  * git: Fix gitweb historyurl examples so "diff to current" links work.
    (Thanks jrayhawk)
  * meta: Allow syntax closer to html meta to be used.
  * Add new disable hook, allowing plugins to perform cleanup after they
    have been disabled.
  * Use Digest::SHA built into perl rather than external Digest::SHA1
    to simplify dependencies. Closes: #591040
  * Fixes a bug that prevented matching deleted pages when using the page()
    PageSpec.

 -- Joey Hess <joeyh@debian.org>  Wed, 04 Aug 2010 09:20:52 -0400

ikiwiki (3.20100722) unstable; urgency=low

  * img: Add a margin around images displayed by this directive.
  * comments: Added commentmoderation directive for easy linking to the
    comment moderation queue.
  * aggregate: Write timestamp next aggregation can happen to
    .ikiwiki/aggregatetime, to allow for more sophisticated cron jobs.
  * Add --changesetup mode that allows easily changing options in a
    setup file.
  * openid: Fix handling of utf-8 nicknames.
  * Clarified what the filter hook should be passed: Only be the raw,
    complete text of a page. Not a snippet, or data read in from an
    unrelated file.
  * template: Do not pass filled in template through filter hook.