@@ -3,6 +3,7 @@ ikiwiki (3.20100815.2) UNRELEASED; urgency=low
   * openid: Syntax tweak to the javascript code to make it work with MSIE 7
     (and MSIE 8 in compat mode). Thanks to Iain McLaren for reporting
     the bug and providing access to debug it.
+  * blogspam: Fix crash when content contained utf-8.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 15 Aug 2010 11:42:55 -0400
 
